modified the display name of ft200 add-on files

--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -29,6 +29,11 @@ parent: app(HDM)
         </figure>
     </div>
     <input type="text" name="serialNumber" id="serialNumber" placeholder="请在此输入蓝牙卡片序列号（后三位）" onfocus="this.value=''">
+    <p>注：以下名称中的数字为蓝牙卡片的序列号。有的名称中带有字母标识<strong>'A/T'</strong>, 
+        <strong>'A/T'</strong>意指该宏可以同时激活报警和<strong>'2|2'</strong>双读头功能，且可自行打开关闭双读头功能。
+        若<strong>'A/T'</strong>标识后面继续标注数字如<strong>'123|4'</strong>，
+        则该宏激活双读头的方式为<strong>'123|4'</strong>，非<strong>'2|2'</strong>。
+    </p>
 
     <ul id="responsive_list">
         <li><a download href="/assets/app-hdm/add-on/FT200/AlrmPrem_AKC169-171_FT200.Signed.dlkAddon">169-171</a></li>
@@ -122,36 +127,36 @@ parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 300.dlkAddon">001/300 301 302(报警)</a></li>
         <li><a class="dm22009" download href="\assets\app-hdm\add-on\FT200\DM22009-DualAnt_12-34.Signed.FT200.001 522.dlkAddon">001/522 523 524(报警+'2|2')</a></li>
         <li><a class="dm22005" download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 522.dlkAddon">001/522 523 524(报警)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 867.dlkAddon">001/867 868 869(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 507.dlkAddon">001/507 508 509(报警/T)</a></li>
-        <li><a class="dm22015" download href="\assets\app-hdm\add-on\FT200\DM22015-DualAnt_123-4.Signed.FT200.001 507.dlkAddon">001/507 508 509(报警/T'123|4')</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 306.dlkAddon">001/306 307 308(报警/T)</a></li>
-        <li><a class="dm22015" download href="\assets\app-hdm\add-on\FT200\DM22015-DualAnt_123-4.Signed.FT200.001 306.dlkAddon">001/306 307 308(报警/T'123|4')</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 291.dlkAddon">001/291 292 293(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 864.dlkAddon">001/864 865 866(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 822.dlkAddon">001/822 823 824(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 816.dlkAddon">001/816 817 818(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 819.dlkAddon">001/819 820 821(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 861.dlkAddon">001/861 862 863(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 801.dlkAddon">001/801 802 803(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 510.dlkAddon">001/510 511 512(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 513.dlkAddon">001/513 514 515(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 516.dlkAddon">001/516 517 518(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 534.dlkAddon">001/534 535 536(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 309.dlkAddon">001/309 310 311(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 798.dlkAddon">001/798 799 800(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 288.dlkAddon">001/288 289 290(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 858.dlkAddon">001/858 859 860(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 855.dlkAddon">001/855 856 857(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 852.dlkAddon">001/852 853 854(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 792.dlkAddon">001/792 793 794(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 849.dlkAddon">001/849 850 851(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 297.dlkAddon">001/297 298 299(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 303.dlkAddon">001/303 304 305(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 294.dlkAddon">001/294 295 296(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 846.dlkAddon">001/846 847 848(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 843.dlkAddon">001/843 844 845(报警/T)</a></li>
-        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 840.dlkAddon">001/840 841 842(报警/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 867.dlkAddon">001/867 868 869(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 507.dlkAddon">001/507 508 509(A/T)</a></li>
+        <li><a class="dm22015" download href="\assets\app-hdm\add-on\FT200\DM22015-DualAnt_123-4.Signed.FT200.001 507.dlkAddon">001/507 508 509(A/T'123|4')</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 306.dlkAddon">001/306 307 308(A/T)</a></li>
+        <li><a class="dm22015" download href="\assets\app-hdm\add-on\FT200\DM22015-DualAnt_123-4.Signed.FT200.001 306.dlkAddon">001/306 307 308(A/T'123|4')</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 291.dlkAddon">001/291 292 293(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 864.dlkAddon">001/864 865 866(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 822.dlkAddon">001/822 823 824(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 816.dlkAddon">001/816 817 818(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 819.dlkAddon">001/819 820 821(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 861.dlkAddon">001/861 862 863(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 801.dlkAddon">001/801 802 803(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 510.dlkAddon">001/510 511 512(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 513.dlkAddon">001/513 514 515(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 516.dlkAddon">001/516 517 518(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 534.dlkAddon">001/534 535 536(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 309.dlkAddon">001/309 310 311(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 798.dlkAddon">001/798 799 800(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 288.dlkAddon">001/288 289 290(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 858.dlkAddon">001/858 859 860(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 855.dlkAddon">001/855 856 857(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 852.dlkAddon">001/852 853 854(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 792.dlkAddon">001/792 793 794(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 849.dlkAddon">001/849 850 851(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 297.dlkAddon">001/297 298 299(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 303.dlkAddon">001/303 304 305(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 294.dlkAddon">001/294 295 296(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 846.dlkAddon">001/846 847 848(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 843.dlkAddon">001/843 844 845(A/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 840.dlkAddon">001/840 841 842(A/T)</a></li>
     {% for addon in site.data.addons %}
         <li class="{{addon.class_code}} "><a download href="{{addon.relative_url}} ">{{addon.name}} </a></li>
     {% endfor %}
