--- a/assets/FT200/FT200-videos-cellphones.html
+++ b/assets/FT200/FT200-videos-cellphones.html
@@ -25,9 +25,10 @@ grand_parent: FT200
     </div>
     
     <div style="padding-bottom: 75%; position: relative; margin-top: 5%;">
-        <iframe frameborder="0" src="https://tv.sohu.com/s/sohuplayer/iplay.html?bid=427073674&autoplay=true&disablePlaylist=true" 
-        allowFullScreen="true" scrolling="no" border="0" framespacing="0" allowfullscreen="true"
-        style="width: 100%; height: 100%; position: absolute;"></iframe>
+        <iframe src="//player.bilibili.com/player.html?aid=532298074&bvid=BV1Vu411J7D3&cid=1236030851&page=1" 
+        scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" 
+        style="width: 100%; height: 100%; position: absolute;"> </iframe>
     </div>
 </body>
 </html>
+
