added link for watching the video on bilibili

--- a/assets/FT200/FT200-videos-cellphones.html
+++ b/assets/FT200/FT200-videos-cellphones.html
@@ -29,6 +29,7 @@ grand_parent: FT200
         scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" 
         style="width: 100%; height: 100%; position: absolute;"> </iframe>
     </div>
+    <p>您也可以点击<a href="https://www.bilibili.com/video/BV1Vu411J7D3/">此处</a>，转至B站观看此视频</p>
 </body>
 </html>
 
