--- a/DT510.html
+++ b/DT510.html
@@ -6,15 +6,37 @@ has_children: true
 ---
 <html>
     <head>
+        <!-- Latest CDN production JavaScript and CSS -->
+        <script src="https://global.oktacdn.com/okta-signin-widget/7.11.3/js/okta-sign-in.min.js" 
+        type="text/javascript"></script>
+        <link href="https://global.oktacdn.com/okta-signin-widget/7.11.3/css/okta-sign-in.min.css" 
+        type="text/css" rel="stylesheet"/>
+
         <style>
             .responsive {float: right; width: 40%; height: auto;}
             .title {color: #991601;}
         </style>
     </head>
     <body>
+        <div id="widget-container"></div>
+
         <h2><a class="title"
             href="https://www.hafele.com.de/en/product/dt-510-electronic-profile-cylinder-optional-versions/000000880000ac3000020023/#SearchParameter=&@QueryTerm=dt510&Category=N1MKAOsCQPAAAAFz6vk3OCHk&@P.FF.followSearch=9688&PageNumber=1&OriginalPageSize=12&PageSize=12&Position=1&OrigPos=18&ProductListSize=26&PDP=true">
             {{ page.title }}</a></h2>
         <div class="responsive"><img src="\assets\DT510\dt510.jpg" alt=""></div>
+
+        <script>
+            const signIn = new OktaSignIn({baseUrl: 'dev-22160799.okta.com'});
+          
+            signIn.showSignInToGetTokens({
+              scopes: ['openid', 'profile'] // optional
+            }).then(function(tokens) {
+              // Store tokens
+            }).catch(function(error) {
+              // This function is invoked with errors the widget cannot recover from:
+              // Known errors: CONFIG_ERROR, UNSUPPORTED_BROWSER_ERROR
+            });
+          </script>          
+          
     </body>
 </html>
