modifed dt510 authentication

--- a/DT510.html
+++ b/DT510.html
@@ -26,7 +26,7 @@ has_children: true
         <div class="responsive"><img src="\assets\DT510\dt510.jpg" alt=""></div>
 
         <script>
-            const signIn = new OktaSignIn({baseUrl: 'dev-22160799.okta.com'});
+            const signIn = new OktaSignIn({baseUrl: 'https://dev-22160799.okta.com'});
           
             signIn.showSignInToGetTokens({
               scopes: ['openid', 'profile'] // optional
