added plugin jekyll-redirect-from

--- a/assets/app-hdm/apk.html
+++ b/assets/app-hdm/apk.html
@@ -2,6 +2,7 @@
 layout: page
 title: 安装文件/APK
 parent: app(HDM)
+redirect_to: https://dialock-hafele.netlify.app/assets/app-hdm/apk
 ---
 <!DOCTYPE html>
 <html lang="en">
